--- a/LabBook.org
+++ b/LabBook.org
@@ -53924,19 +53924,35 @@ as.data.frame();
 #Renomear os identificadores das threads
 tids = unique(df$Thread)
 tidsdf = data.frame(Thread=tids, ntids = 1:length(tids));
-
 df <- merge (df, tidsdf, by.x="Thread", by.y="Thread");
-df <- df %>% select(-Thread) %>% rename(Thread=ntids) %>% as.data.frame();
-head(df);
+df <- df %>% select(-Thread) %>% rename(Thread=ntids) %>% group_by(Thread,Region) %>% as.data.frame();
+
+df <- filter(df, MISSES_L2 > 0.30);
+dfSubset <- df[grep("barrier", df$Region),];
+df1 <- anti_join(df,dfSubset);
+
+#mtcars[grep("Merc", rownames(mtcars)), ]
+head(df1);
 #tidsdf
 #+end_src
 
 #+RESULTS:
-:      Start      End Duration                   Region  MISSES_L2 Thread
-: 1 49647.31 49647.32 0.003071 !$omp parallel @cg.f:339 0.12500000      6
-: 2 87089.10 87089.10 0.003311 !$omp parallel @cg.f:513 0.01351351      6
-: 3 90968.93 90968.93 0.003224 !$omp parallel @cg.f:513 0.12962963      6
-: 4 28857.83 28857.83 0.003134 !$omp parallel @cg.f:513 0.04761905      6
-: 5 52226.58 52226.58 0.003086 !$omp parallel @cg.f:513 0.19230769      6
-: 6 97002.63 97002.64 0.003143 !$omp parallel @cg.f:339 0.11666667      6
+: Joining, by = c("Start", "End", "Duration", "Region", "MISSES_L2", "Thread")
+:      Start       End  Duration                 Region MISSES_L2 Thread
+: 1 110365.8 110365.83  0.004344 !$omp master @cg.f:546 0.4929577      2
+: 2 111077.4 111077.52  0.119266     !$omp do @cg.f:656 1.4808168      2
+: 3  70646.5  70646.63  0.120836     !$omp do @cg.f:656 1.4634761      2
+: 4 100444.3 100444.40  0.120005     !$omp do @cg.f:656 1.4877261      2
+: 5 115396.2 115437.58 41.412308     !$omp do @cg.f:568 0.8110392      2
+: 6 110365.3 110365.37  0.083634     !$omp do @cg.f:617 8.6798780      2
 
+
+#+begin_src R :results output graphics :file (org-babel-temp-file "figure" ".png") :exports both :width 600 :height 400 :session *R* 
+
+library(ggplot2);
+
+ggplot(df1, aes(x=End, y=MISSES_L2,colour=Region), group=Thread) +scale_x_log10() +  geom_point() + facet_grid(~Thread);
+#+end_src
+
+#+RESULTS:
+[[file:/tmp/babel-36257YK/figure3625u_A.png]]
